[package]
name = "illium-crypto"
version = "0.1.0"
authors = ["cpacia <ctpacia@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Illium lurk vesta curve signature"
repository = "https://github.com/project-illium/ilxd/crypto/rust"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ff = { version = "0.13.0", features = ["derive"] }
sha3 = "0.10"
pasta_curves = { git="https://github.com/lurk-lab/pasta_curves", branch="dev", features = ["repr-c", "serde"]}
pasta-msm = { git = "https://github.com/lurk-lab/pasta-msm", branch = "dev" }
num-bigint = { version = "0.4", features = ["serde", "rand"] }
bitvec = "1.0"
rand = "0.8.5"
rand_chacha = "0.3"
libc = "0.2"

[patch.crates-io]
# This is needed to ensure halo2curves, which imports pasta-curves, uses the *same* traits in bn256_grumpkin
pasta_curves = { git="https://github.com/lurk-lab/pasta_curves", branch="dev" }

[lib]
crate-type = ["staticlib"]

