[package]
name = "illium-crypto"
version = "0.1.0"
authors = ["cpacia <ctpacia@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Illium lurk grumpkin curve signature"
repository = "https://github.com/project-illium/ilxd/crypto/rust"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ff = { version = "0.13.0", features = ["derive"] }
sha3 = "0.10"
halo2curves = { version = "0.6.0", features = ["bits", "derive_serde"] }
pasta_curves = { version = "0.5.0", features = ["repr-c", "serde"]}
num-bigint = { version = "0.4", features = ["serde", "rand"] }
bitvec = "1.0"
rand = "0.8.5"
rand_chacha = "0.3"
libc = "0.2"
bincode = "1.3.3"
serde = "1.0.196"

[lib]
crate-type = ["staticlib"]

[profile.docker]
inherits = 'release'
opt-level = 3
debug = false
split-debuginfo = 'off' 
strip = "none"
debug-assertions = false
overflow-checks = false
lto = false
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false

