[package]
name = "illium-zk"
version = "0.1.0"
authors = ["cpacia <ctpacia@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Illium lurk rust bindings"
repository = "https://github.com/project-illium/ilxd/crypto/rust"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lurk = "0.3.1"
rand = "0.8.5"
pasta_curves = { git="https://github.com/lurk-lab/pasta_curves", branch="dev" }

[patch.crates-io]
# This is needed to ensure halo2curves, which imports pasta-curves, uses the *same* traits in bn256_grumpkin
pasta_curves = { git="https://github.com/lurk-lab/pasta_curves", branch="dev" }

[lib]
crate-type = ["staticlib"]