[package]
name = "illium-zk"
version = "0.1.0"
authors = ["cpacia <ctpacia@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Illium lurk rust bindings"
repository = "https://github.com/project-illium/ilxd/crypto/rust"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bellpepper = { git = "https://github.com/lurk-lab/bellpepper", branch = "dev" }
bellpepper-core = { git = "https://github.com/lurk-lab/bellpepper", branch = "dev" }
bincode = "1.3.3"
blake2s_simd = "1.0.2"
ff = "0.13"
flate2 = "1.0.26"
hex = "0.4.3"
itertools = "0.11"
lazy_static = "1.4.0"
lurk = { git = "https://github.com/lurk-lab/lurk-rs.git", branch = "main" }
lurk-macros = "0.2.0"
nova = { git = "https://github.com/lurk-lab/arecibo", branch = "dev", package = "arecibo", default-features = false}
num-bigint = { version = "0.4", features = ["serde", "rand"] }
once_cell = "1.19.0"
openssl = { version = "0.10", features = ["vendored"] }
pasta_curves = { git="https://github.com/lurk-lab/pasta_curves", branch="dev" }
rand = "0.8.5"
rand_core = { version = "0.6", default-features = false }
sha2 = { version = "0.10.2" }
sha3 = "0.10"
serde = "1.0"

[dev-dependencies]
threadpool = "1.8.1"

[features]
default = []
cuda = ["lurk/cuda", "nova/cuda"]

[patch.crates-io]
# This is needed to ensure halo2curves, which imports pasta-curves, uses the *same* traits in bn256_grumpkin
pasta_curves = { git="https://github.com/lurk-lab/pasta_curves", branch="dev" }

[lib]
crate-type = ["staticlib"]